--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
       {% endif %}
       {% if site.show_downloads %}
         <a href="{{ site.github.zip_url }}" class="btn">Caso</a>
-        <a href="{{ site.github.tar_url }}" class="btn">Miembros</a>
+        <a href="https://equipo25fundbio.github.io/miembros/miembros.html" class="btn">Miembros</a>
         <a href="{{ site.github.tar_url }}" class="btn">Entregables</a>
       {% endif %}
     </header>
